# Otternel

./: .env_exemple  .gitignore  Cargo.toml  Dockerfile  README.md  deploy-update.sh  docker-compose.yml  triggers.toml
serverlog/: README.md  test.sh
src/: actions.rs  config.rs  log_watcher.rs  main.rs
src/db/: mod.rs  models.rs  repository_codes_liaison.rs  repository_default.rs  repository_player.rs  repository_players_users.rs  repository_servers.rs  repository_serveurs.rs
src/helper/: code_generator.rs  logger_tool.rs  minecraft_account_formatter.rs  mod.rs  open_database.rs  rcon_helper.rs  webhook_discord.rs
src/playerstats/: cobblemon_pokemon_fetch.rs  cobblemon_stats.rs  minecraft_players.rs  mod.rs
src/serverlog/: actions.rs  log_watcher.rs  mod.rs
src/services/: mod.rs  webhook_discord.rs
