[package]
name = "Otternel"
version = "1.0.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
envy = "0.4"
notify = "6"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
toml = "0.8"
ureq = { version = "2", default-features = false, features = ["json", "native-tls"] }
native-tls = "0.2"
serde_json = "1"
