[package]
name = "Otternel"
version = "1.0.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
envy = "0.4"
notify = "6"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
toml = "0.8"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
serde_json = "1"
fern = "0.6"
log = "0.4"
colored = "2"
chrono = { version = "0.4.41", features = ["serde"] }
mysql = "26.0.1"