[package]
name = "Otternel"
version = "1.0.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
envy = "0.4"
notify = "6"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
toml = "0.8"
ureq = { version = "2", default-features = false, features = ["json", "tls"] }
serde_json = "1"
fern = "0.6"
log = "0.4"
colored = "2"
chrono = { version = "0.4.41", features = ["serde"] }
mysql = "26.0.1"
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.99"
tar = "0.4.44"
bollard = "0.19.2"
uuid = { version = "1.18.1", features = ["v4"] }
fastnbt = "2.6.0"
flate2 = "1.1.2"
db = "0.0.0-alpha.101"